feat: configure Spring Security with JWT authentication, stateless session management, and CORS support